--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/FragmentContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/FragmentContainer"
-    tools:context="com.massive.popmovie.MainActivity"
-    android:padding="10dp">
+    tools:context="com.massive.popmovie.view.MainActivity">
 
 </FrameLayout>
