--- a/app/src/main/res/layout/grid_fragment.xml
+++ b/app/src/main/res/layout/grid_fragment.xml
@@ -2,8 +2,5 @@
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/GridRecyclerView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:drawable/alert_dark_frame"
-    android:padding="5dp">
-
-</android.support.v7.widget.RecyclerView>
+    android:layout_height="wrap_content"
+    android:background="@android:color/background_dark"></android.support.v7.widget.RecyclerView>
