--- a/app/src/main/res/layout/grid_content.xml
+++ b/app/src/main/res/layout/grid_content.xml
@@ -11,6 +11,6 @@
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:padding="1dp"
-        android:scaleType="fitCenter"
+        android:scaleType="centerCrop"
         android:src="@mipmap/ic_launcher" />
 </RelativeLayout>
