--- a/app/src/main/res/layout/grid_content.xml
+++ b/app/src/main/res/layout/grid_content.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/ivMoviePoster"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:padding="1dp"
-        android:scaleType="centerCrop"
+android:padding="2dp"
+        android:scaleType="fitXY"
         android:src="@mipmap/ic_launcher" />
 </RelativeLayout>
