--- a/app/src/main/res/layout/grid_fragment.xml
+++ b/app/src/main/res/layout/grid_fragment.xml
@@ -3,4 +3,6 @@
     android:id="@+id/GridRecyclerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    ></android.support.v7.widget.RecyclerView>
+    >
+
+</android.support.v7.widget.RecyclerView>
