--- a/app/src/main/res/layout/detial_fragment.xml
+++ b/app/src/main/res/layout/detial_fragment.xml
@@ -8,13 +8,18 @@
             name="Movie"
             type="com.massive.popmovie.model.Movie"/>
     </data>
+
+
 <ScrollView
     android:layout_width="match_parent"
-    android:layout_height="fill_parent">
+    android:fillViewport="true"
+    android:layout_height="wrap_content">
+
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-       >
+        android:adjustViewBounds="true"
+        >
 
         <TextView
             android:id="@+id/MovieTitle"
@@ -48,8 +53,8 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/MovieTitle"
             app:layout_constraintVertical_bias="0.2"
-            app:srcCompat="@drawable/popcorn"
             app:poster_path="@{Movie.poster_path}"
+            app:srcCompat="@drawable/popcorn"
             tools:ignore="ContentDescription" />
 
         <Button
@@ -60,10 +65,10 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="136dp"
+            android:layout_marginTop="135dp"
             android:background="#148eb7"
             android:text="@string/add_it_favourite"
-            app:layout_constraintHorizontal_bias="0.277"
+            app:layout_constraintHorizontal_bias="0.2"
             app:layout_constraintLeft_toRightOf="@+id/imageView2"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/MovieTitle" />
@@ -91,6 +96,7 @@
             android:id="@+id/Description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
@@ -98,12 +104,11 @@
             android:layout_marginTop="47dp"
             android:text="@{Movie.overview}"
             android:textSize="14sp"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Favourit_button"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/Favourit_button" />
 
         <ImageView
             android:id="@+id/imageView"
@@ -136,11 +141,11 @@
             app:layout_constraintTop_toBottomOf="@+id/imageView">
 
 
-            <Button
+            <ImageView
                 android:id="@+id/buttonShowView1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/play"
+                android:background="@drawable/playarrow"
                 android:onClick="buttonShowView_1" />
 
             <TextView
@@ -171,11 +176,11 @@
             app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
 
-            <Button
+            <ImageView
                 android:id="@+id/buttonShowView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/play"
+                android:background="@drawable/playarrow"
                 android:onClick="buttonShowView_2" />
 
             <TextView
@@ -206,11 +211,11 @@
             app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
 
-            <Button
+            <ImageView
                 android:id="@+id/buttonShowView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/play"
+                android:background="@drawable/playarrow"
                 android:onClick="buttonShowView_3" />
 
             <TextView
@@ -242,21 +247,21 @@
             app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
 
         <Button
+            android:id="@+id/button"
             android:layout_width="391dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="-16dp"
             android:text="Click here to see the review "
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView23"
-            app:layout_constraintHorizontal_bias="1.0"
-            android:id="@+id/button" />
+            app:layout_constraintTop_toBottomOf="@+id/imageView23" />
 
         <RatingBar
             android:id="@+id/ratingBar"
+            style="@android:style/Widget.DeviceDefault.RatingBar.Indicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
@@ -264,11 +269,13 @@
             android:isIndicator="true"
             android:numStars="10"
             android:progressTint="@color/colorPrimary"
-            android:stepSize=".5"
+            android:rating="7.5"
+            android:stepSize=".1"
             app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button" />
+            app:layout_constraintTop_toBottomOf="@+id/button"
+            android:adjustViewBounds="true"/>
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
