--- a/app/src/main/res/layout/detial_fragment.xml
+++ b/app/src/main/res/layout/detial_fragment.xml
@@ -253,11 +253,12 @@
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="-24dp"
+            android:layout_marginTop="-3dp"
             android:text="Click here to see the review "
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView23" />
+            app:layout_constraintTop_toBottomOf="@+id/imageView23"
+            app:layout_constraintHorizontal_bias="1.0" />
 
         <RatingBar
             android:id="@+id/ratingBar"
@@ -269,13 +270,13 @@
             android:isIndicator="true"
             android:numStars="10"
             android:progressTint="@color/colorPrimary"
-            android:rating="7.5"
+            android:rating="0"
             android:stepSize=".1"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:adjustViewBounds="true"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="-21dp"
             app:layout_constraintTop_toBottomOf="@+id/button" />
 
     </android.support.constraint.ConstraintLayout>
