--- a/app/src/main/res/layout/detial_fragment.xml
+++ b/app/src/main/res/layout/detial_fragment.xml
@@ -112,7 +112,7 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="368dp"
+            android:layout_width="match_parent"
             android:layout_height="3dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
