--- a/app/src/main/res/layout/detial_fragment.xml
+++ b/app/src/main/res/layout/detial_fragment.xml
@@ -77,7 +77,6 @@
             android:id="@+id/ReleaseDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
@@ -85,11 +84,12 @@
             android:layout_marginTop="75dp"
             android:text='@{Movie.release_date}'
             android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/Favourit_button"
-            app:layout_constraintHorizontal_bias="0.15"
+            app:layout_constraintHorizontal_bias="0.136"
             app:layout_constraintLeft_toRightOf="@+id/imageView2"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/MovieTitle"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/Favourit_button"
             app:layout_constraintVertical_bias="0.0" />
 
         <TextView
@@ -112,7 +112,7 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="3dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
@@ -248,36 +248,38 @@
 
         <Button
             android:id="@+id/button"
-            android:layout_width="391dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="-3dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:text="Click here to see the review "
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView23"
-            app:layout_constraintHorizontal_bias="1.0" />
+            app:layout_constraintTop_toBottomOf="@+id/imageView23" />
 
         <RatingBar
             android:id="@+id/ratingBar"
-            style="@android:style/Widget.DeviceDefault.RatingBar.Indicator"
+            style="@android:style/Widget.Holo.Light.RatingBar.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
+            android:adjustViewBounds="true"
             android:foregroundGravity="center_horizontal"
             android:isIndicator="true"
             android:numStars="10"
             android:progressTint="@color/colorPrimary"
             android:rating="0"
             android:stepSize=".1"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:adjustViewBounds="true"
-            android:layout_marginTop="-21dp"
-            app:layout_constraintTop_toBottomOf="@+id/button" />
+            app:layout_constraintTop_toBottomOf="@+id/button"
+            android:layout_marginTop="-34dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginLeft="8dp" />
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
