--- a/app/src/main/res/layout/detial_fragment.xml
+++ b/app/src/main/res/layout/detial_fragment.xml
@@ -1,24 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <data>
         <variable
             name="Movie"
-            type="com.massive.popmovie.model.Movie"/>
+            type="com.massive.popmovie.model.Movie" />
     </data>
-
-
 <ScrollView
     android:layout_width="match_parent"
-    android:fillViewport="true"
     android:layout_height="match_parent">
-
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+
         >
 
         <TextView
@@ -79,20 +76,16 @@
             android:id="@+id/ReleaseDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginTop="75dp"
             android:text='@{Movie.release_date}'
             android:textSize="18sp"
-            app:layout_constraintHorizontal_bias="0.136"
-            app:layout_constraintLeft_toRightOf="@+id/imageView2"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/MovieTitle"
-            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/Favourit_button"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintHorizontal_bias="0.136"
+            app:layout_constraintLeft_toLeftOf="@+id/Favourit_button"
+            app:layout_constraintTop_toBottomOf="@+id/MovieTitle"
+            app:layout_constraintVertical_bias="0.0"
+            tools:text="default" />
 
         <TextView
             android:id="@+id/Description"
@@ -112,7 +105,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/Favourit_button" />
 
-        <ImageView
+        <View
             android:id="@+id/imageView"
             android:layout_width="0dp"
             android:layout_height="3dp"
@@ -232,7 +225,7 @@
 
         </LinearLayout>
 
-        <ImageView
+        <View
             android:id="@+id/imageView23"
             android:layout_width="0dp"
             android:layout_height="3dp"
@@ -258,7 +251,6 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="Click here to see the review "
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView23" />
@@ -269,6 +261,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
             android:adjustViewBounds="true"
             android:foregroundGravity="center_horizontal"
             android:isIndicator="true"
@@ -278,10 +274,7 @@
             android:stepSize=".1"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button"
-            android:layout_marginTop="-34dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginLeft="8dp" />
+            app:layout_constraintTop_toBottomOf="@+id/button" />
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
