--- a/app/src/main/res/layout/detial_fragment.xml
+++ b/app/src/main/res/layout/detial_fragment.xml
@@ -245,7 +245,7 @@
             app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/ReviewButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -253,7 +253,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="Click here to see the review "
+            android:text="@string/click_review"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView23" />
@@ -277,7 +277,7 @@
             android:stepSize=".1"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button" />
+            app:layout_constraintTop_toBottomOf="@+id/ReviewButton" />
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
