--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -5,9 +5,10 @@
     tools:context="com.massive.popmovie.view.ReviewActivity">
 
     <data>
+
         <variable
             name="review"
-            type="com.massive.popmovie.model.Reviews"/>
+            type="com.massive.popmovie.model.Reviews" />
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -21,26 +22,31 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:text="@{review.author}"
             android:textAllCaps="false"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="16dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="385dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="10dp"
             android:gravity="left"
             android:padding="5dp"
             android:text="@{review.content}"
             android:textAppearance="?android:attr/textAppearanceMedium"
             app:layout_constraintLeft_toLeftOf="@+id/textView"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
 
         <View
             android:id="@+id/imageView23"
