--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,6 @@
     android:id="@+id/FragmentContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.massive.popmovie.view.MainActivity">
+    tools:context="com.massive.popmovie.Views.MainActivity">
 
 </FrameLayout>
