--- a/app/src/main/res/layout/detial_fragment.xml
+++ b/app/src/main/res/layout/detial_fragment.xml
@@ -16,9 +16,8 @@
     android:layout_height="match_parent">
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:scrollbars="vertical"
-
         >
 
         <TextView
