--- a/app/src/main/res/layout/detial_fragment.xml
+++ b/app/src/main/res/layout/detial_fragment.xml
@@ -16,8 +16,9 @@
     android:layout_height="match_parent">
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:scrollbars="vertical"
+
         >
 
         <TextView
@@ -54,7 +55,7 @@
             app:layout_constraintVertical_bias="0.2"
             app:poster_path="@{Movie.poster_path}"
             app:srcCompat="@drawable/popcorn"
-            tools:ignore="ContentDescription" />
+            />
 
         <Button
             android:id="@+id/Favourit_button"
